# system-scanner

./: README.md  advanced_scanner.py  pyproject.toml  scanner.py  setup.py
output/: live_dashboard.py
scanner/: __main__.py  cli.py  core.py
system_scanner/cli/: main.py
system_scanner/core/: scanner.py
system_scanner/core/collectors/: cpu.py  disk.py  memory.py
system_scanner/output/: doctor.py  live_dashboard.py
system_scanner/output/formatters/: base.py  json_formatter.py  live_dashboard.py  rich_formatter.py  table_formatter.py  text_formatter.py
system_scanner/system_scanner/output/: process_monitor.py
system_scanner/utils/: banner.py  logger.py
